# Sem_3

./: .gitignore  CMakeLists.txt
contest_1/: README.md
contest_1/A_octal/: octal.c
contest_1/B_triple/: triple.c
contest_1/C_sum/: sum.c
contest_1/D_big_num_bin_sum/: bin_sum.c
contest_1/E_hexen/: hexen.c
contest_1/F_decimal/: decimal.c
contest_1/G_longN/: longN.c
contest_1/H_setun/: setun.c
contest_1/I_any/: any.c
contest_1/J_rational/: rational.c
contest_1/K_rome2arabic/: rome2arabic.c
contest_1/L_Q/: q.c
contest_1/M_base/: base.c
contest_1/N_i/: i.c
contest_1/O_drob/: drob.c
contest_2/: README.md
contest_2/A_bit_0/: bit_0.c
contest_2/B_rwx/: rwx.c
contest_2/C_bit_1/: bit_1.c
contest_2/D_bit_2/: bit_2.c
contest_2/E_bit_3/: bit_3.c
contest_2/F_bit_4/: bit_4.c
contest_2/G_bit_5/: bit_5.c
contest_2/H_broadcast/: broadcast.c
contest_2/I_complement/: complement.c
contest_2/J_size/: size.c
contest_2/K_eratosfen/: eratosfen.c
contest_2/L_virus/: virus.c
contest_2/M_meteorit/: meteorit.c
contest_2/N_showdouble/: showdouble.c
contest_2/O_sum/: sum.c
contest_2/P_base64/: base64.c
contest_2/Q_float/: float.c
contest_2/R_patch/: patch.c
contest_3/: README.md
contest_3/A_cpu/: cpu.c
contest_3/B_cache/: cache.c
contest_3/C_neo/: neo.c
contest_3/D_flag/: flag.c
contest_3/F_simple_page/: simple_page.c
contest_3/G_pdp_rw/: pdp_rw.c
contest_3/H_pdp_load/: pdp_load.c
contest_4/: README.md
contest_4/A_zero/: zero.s
contest_4/B_one/: one.s
contest_4/C_next/: next.s
contest_4/D_prev/: prev.s
contest_4/I_mul64/: mul64.s
contest_4/J_sdiv/: sdiv.s
contest_4/K_sdiv64/: sdiv64.s
contest_4/L_egalite/: egalite.s
contest_4/P_antiFa/: antiFa.s
contest_5/: README.md
contest_6/: README.md
(+41 files in other folders)
