cmake_minimum_required(VERSION 3.22)
project(Sem_3 C)

set(CMAKE_C_STANDARD 17)

add_executable(Sem_3 main.c)

add_executable(1_A_octal contest_1/A_octal/octal.c)
add_executable(1_B_triple contest_1/B_triple/triple.c)
add_executable(1_C_sum contest_1/C_sum/sum.c)
add_executable(1_D_bin_sum contest_1/D_big_num_bin_sum/bin_sum.c)
add_executable(1_E_hexen contest_1/E_hexen/hexen.c)
add_executable(1_F_decimal contest_1/F_decimal/decimal.c)
add_executable(1_G_longN contest_1/G_longN/longN.c)
add_executable(1_H_setun contest_1/H_setun/setun.c)