cmake_minimum_required(VERSION 3.22)
project(Sem_3 C)

set(CMAKE_C_STANDARD 17)

add_executable(Sem_3 main.c)


add_executable(1_A_octal contest_1/A_octal/octal.c)
add_executable(1_B_triple contest_1/B_triple/triple.c)
add_executable(1_C_sum contest_1/C_sum/sum.c)
add_executable(1_D_bin_sum contest_1/D_big_num_bin_sum/bin_sum.c)
add_executable(1_E_hexen contest_1/E_hexen/hexen.c)
add_executable(1_F_decimal contest_1/F_decimal/decimal.c)
add_executable(1_G_longN contest_1/G_longN/longN.c)
add_executable(1_H_setun contest_1/H_setun/setun.c)
add_executable(1_I_any contest_1/I_any/any.c)
add_executable(1_J_rational contest_1/J_rational/rational.c)
add_executable(1_K_rome2arabic contest_1/K_rome2arabic/rome2arabic.c)
add_executable(1_L_Q contest_1/L_Q/q.c)
add_executable(1_M_base contest_1/M_base/base.c)
add_executable(1_N_i contest_1/N_i/i.c)
add_executable(1_O_drob contest_1/O_drob/drob.c)


add_executable(2_A_bit_0 contest_2/A_bit_0/bit_0.c)
add_executable(2_B_rwx contest_2/B_rwx/rwx.c)
add_executable(2_C_bit_1 contest_2/C_bit_1/bit_1.c)
add_executable(2_D_bit_2 contest_2/D_bit_2/bit_2.c)